- (#4928) CodeQL scan issue fixes @MalloD12
- (#4945) Filter additional credential-like strings in the URL sanitization process DAT-9973 @wwillard7800
- (#567) Improve deferrable validation for AddForeignKey constraints generator @alero
- (#5101) Remove a forgotten `.` in `README.md` @Benjamin-Loison
- (#4959) Remove unnecessary conditions in IndexComparator @asashour

## Security, Driver and Other Updates

- (#5095) Bump org.glassfish.jaxb:jaxb-core from 4.0.3 to 4.0.4 @dependabot
- (#5140) Bump org.xerial:sqlite-jdbc from 3.43.0.0 to 3.43.2.2 @dependabot
- (#4989) Bump org.codehaus.gmavenplus:gmavenplus-plugin from 3.0.0 to 3.0.2 @dependabot
- (#5020) Bump targetMavenVersion from 3.9.4 to 3.9.5 @dependabot
- (#4918) Bump org.apache.maven.plugins:maven-javadoc-plugin from 3.5.0 to 3.6.0 @dependabot
- (#5096) Bump org.apache.maven.plugins:maven-plugin-plugin from 3.9.0 to 3.10.1 @dependabot
- (#5135) Update installer JDK @filipelautert
- (#4927) DAT-15922 FOSSA Support @jnewton03
- (#5026) Bump org.jboss.weld.se:weld-se-core from 5.1.1.Final to 5.1.2.Final @dependabot
- (#4839) Bump actions/checkout from 3 to 4 @dependabot
- (#4914) Bump org.sonarsource.scanner.maven:sonar-maven-plugin from 3.9.1.2184 to 3.10.0.2594 @dependabot
- (#5001) Bump org.testcontainers:testcontainers-bom from 1.19.0 to 1.19.1 @dependabot
- (#4860) Bump actions/cache from 3.3.1 to 3.3.2 @dependabot
- (#4866) Bump org.apache.maven.plugins:maven-enforcer-plugin from 3.4.0 to 3.4.1 @dependabot
- (#4949) Bump org.apache.maven.plugins:maven-shade-plugin from 3.5.0 to 3.5.1 @dependabot
- (#4929) Bump com.h2database:h2 from 2.2.222 to 2.2.224 @dependabot


Changes in version 4.24.0 (2023.09.28)

### Liquibase 4.24.0 is a major release

## New Features

- (#4574) Implement showSummaryOutput parameter @EvaristeGalois11
- (#4395) Improve update summary usability @EvaristeGalois11
- (#4697) Replacing special constants specific to SQL Anywhere by commonly supported JDBC Escape Functions @mkarg