@@ -1,6 +1,8 @@
 package liquibase.extension.testing.command
 
+
 import liquibase.exception.CommandValidationException
+import liquibase.util.TestUtil
 
 CommandTests.define {
     command = ["tag"]
@@ -34,6 +36,10 @@ Optional Args:
                 password:   { it.password },
                 tag: "version_2.0"
         ]
+
+        expectations = {
+            TestUtil.assertAllDeploymentIdsNonNull()
+        }
     }
 
     run "Run without a tag should throw an exception",  {
